--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>JavaScript</title>
-	<link rel="stylesheet" href="./main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
-	
+	<div class="container-fluid" id="top-col">
+		<h1>Exercises in JavaScript</h1>
+	</div>
+	<ul>
+		<li>Basic Knowledge</li>
+		<li>Exercise 1</li>
+		<li>Exercise 2</li>
+		<li>Exercise 3</li>
+		<li>Exercise 4</li>
+		<li>Exercise 5</li>
+		<li>Exercise 6</li>
+		<li>Exercise 7</li>
+		<li>Exercise 8</li>
+		<li>Exercise 9</li>
+		<li>Exercise 10</li>
+	</ul>
 </body>
 </html>
