set up template html

--- a/exercies/basic-ex1.html
+++ b/exercies/basic-ex1.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<h1>Exercise #0</h1>
-	<h2>learn about: </h2>
+	<h1>Exercise #1</h1>
+	<h2>learn about: Scope</h2>
 	<div class="problem">
 		
 	</div>
