--- a/index.html
+++ b/index.html
@@ -24,5 +24,44 @@
 		<li>Exercise 9</li>
 		<li>Exercise 10</li>
 	</ul>
+	<ul>
+		<li>Getting Harder</li>
+		<li>Exercise 1</li>
+		<li>Exercise 2</li>
+		<li>Exercise 3</li>
+		<li>Exercise 4</li>
+		<li>Exercise 5</li>
+		<li>Exercise 6</li>
+		<li>Exercise 7</li>
+		<li>Exercise 8</li>
+		<li>Exercise 9</li>
+		<li>Exercise 10</li>
+	</ul>
+	<ul>
+		<li>Getting Tricky</li>
+		<li>Exercise 1</li>
+		<li>Exercise 2</li>
+		<li>Exercise 3</li>
+		<li>Exercise 4</li>
+		<li>Exercise 5</li>
+		<li>Exercise 6</li>
+		<li>Exercise 7</li>
+		<li>Exercise 8</li>
+		<li>Exercise 9</li>
+		<li>Exercise 10</li>
+	</ul>
+	<ul>
+		<li>Diabolical</li>
+		<li>Exercise 1</li>
+		<li>Exercise 2</li>
+		<li>Exercise 3</li>
+		<li>Exercise 4</li>
+		<li>Exercise 5</li>
+		<li>Exercise 6</li>
+		<li>Exercise 7</li>
+		<li>Exercise 8</li>
+		<li>Exercise 9</li>
+		<li>Exercise 10</li>
+	</ul>
 </body>
 </html>
